--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "5.7.2",
+        "axios": "^0.19.0",
         "bootstrap": "4.3.1",
-        "jquery": "3.3.1",
-        "jquery.easing": "^1.4.1"
+        "jquery": "^3.4.1",
+        "jquery.easing": "^1.4.1",
+        "tar": "^4.4.8"
     },
     "devDependencies": {
         "browser-sync": "2.26.3",
