--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@fortawesome/fontawesome-free": "5.7.2",
         "axios": "^0.19.0",
         "bootstrap": "4.3.1",
+        "fstream": "^1.0.12",
         "jquery": "^3.4.1",
         "jquery.easing": "^1.4.1",
         "tar": "^4.4.8"
