--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
         "tar": "^4.4.8"
     },
     "devDependencies": {
-        "browser-sync": "2.26.3",
+        "browser-sync": "^2.26.7",
         "gulp": "^4.0.2",
         "gulp-autoprefixer": "6.0.0",
         "gulp-clean-css": "4.0.0",
